test/modules/errors/useMissingModule3.good
useMissingModule3.chpl:1: error: cannot find module or enum named 'Peas' in module 'Goober'
